# cparse

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO
examples/arithmetic/: .gitignore  Makefile  argsparse.c  argsparse.h  arith_expr_ast_ctor.c  arith_expr_ast_ctor.h  arith_expr_syntax_direct.c  arith_expr_syntax_direct.h  arith_expr_syntax_expr.c  arith_expr_syntax_expr.h  main.c
src/: .gitignore  Makefile  cparse.c  cparse.h  cparse_autorel.c  cparse_autorel.h  cparse_charenc.c  cparse_charenc.h  cparse_component.c  cparse_component.h  cparse_dt.h  cparse_err.c  cparse_err.h  cparse_expr.c  cparse_expr.h  cparse_fileloc.c  cparse_fileloc.h  cparse_functional.c  cparse_functional.h  cparse_guard.c  cparse_guard.h  cparse_json.c  cparse_json.h  cparse_libc.c  cparse_libc.h  cparse_mstr.c  cparse_mstr.h  cparse_reader.c  cparse_reader.h  cparse_regex.c  cparse_regex.h  cparse_regex_ast.c  cparse_regex_ast.h  cparse_regex_converter.c  cparse_regex_converter.h  cparse_regex_lex.c  cparse_regex_lex.h  cparse_regex_match.c  cparse_regex_match.h  cparse_regex_match_state.c  (+35 more)
test/: Makefile  test.c  test_allfail.c  test_allfail.h  test_components.c  test_components.h  test_expr.c  test_expr.h  test_regex.c  test_regex.h  testfw.c  testfw.h
